middleware & associations added

--- a/views/email.ejs
+++ b/views/email.ejs
@@ -7,16 +7,10 @@
 </head>
 <body>
     <div style="font-family: Arial, sans-serif; padding: 20px;">
-        <h2 style="color: #4CAF50;">Order Confirmed ✅</h2>
-        <p>Hello John,</p>
-        <p>Thanks for your order! Here’s a summary:</p>
-        <ul>
-            <li>Product: Wireless Mouse</li>
-            <li>Price: $25</li>
-        </ul>
-        <p style="color: gray;">We will ship it within 2 days.</p>
+        <h1>Hello <%= firstName %> <%= lastName %>!</h1>
         <hr>
-        <small>&copy; 2025 ShopEase</small>
+        <h3>Welcome to Wooden street !!!</h3>
+        <small>&copy; 2025 WoodenStreet</small>
     </div>
 </body>
 </html>
